package ua.hillel.lessons.lesson25.demos._04_decorator;

public interface Device {
    void start();
    int getMagnificationPower();
    void stop();
}
